feat: admin API on a separate port
